did random things and stuff... idk